# triggery

./: .env.sample  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  gunicorn.conf.py  manage.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: compare-version.yaml  copyright-scan.yaml  license-check.yaml  sca.yaml
agents/: atarashiAgent.py  cosineSimNgram.py  dameruLevenDist.py  keywordAgent.py  tfidf.py  wordFrequencySimilarity.py
core/: filters.py  models.py  schedule.py  serializers.py  tasks.py  views.py
core/migrations/: 0001_initial.py  0002_eventlog_is_archived.py  0002_eventlog_trigger_name.py  0003_recurringtrigger.py  0004_rename_payload_apitrigger_schema.py  0005_alter_recurringtrigger_cron_expression.py  0006_alter_eventlog_is_archived_alter_eventlog_is_test.py
triggery/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
