[project]
name = "triggery"
version = "0.1.0"
description = "A trigger management platform"
authors = [
    {name = "rajuljha",email = "rajuljha49@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django (>=5.2.5,<6.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-filter (>=25.1,<26.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
